# RuView

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: sensing-server-docker.yml
api-docs/: user-guide.md  vendor-rf-providers.md
api-docs/adr/: ADR-021-vital-sign-detection-rvdna-pipeline.md  ADR-046-android-tv-box-armbian-deployment.md  ADR-116-cog-ha-matter-seed.md  ADR-127-homecore-state-machine-rust.md  ADR-129-homecore-automation-engine.md  ADR-132-homecore-recorder-history-semantic-search.md  ADR-133-homecore-assist-ruflo.md  ADR-137-fusion-engine-quality-scoring-evidence.md  ADR-141-bfld-privacy-control-plane-modes-attestation.md  ADR-151-room-calibration-specialist-training.md  ADR-154-signal-dsp-beyond-sota.md  ADR-161-homecore-server-layer-security.md  ADR-165-homecore-migrate-from-home-assistant.md  ADR-172-cli-core-csi-deserialiser-security-review.md  ADR-173-metric-locked-pck-mpjpe-accuracy-harness.md  ADR-174-ci-bench-regression-compile-verify-gate.md  ADR-175-int8-quantization-half-pose-model-measured.md  ADR-176-ruview-swarm-nan-fail-open-safety-review.md  ADR-177-nvsim-degenerate-input-hardening.md  ADR-178-desktop-ipc-injection-and-capability-least-privilege.md  ADR-179-occworld-candle-checkpoint-load-hardening.md  ADR-182-npx-ruview-harness-via-metaharness.md  ADR-183-onboard-led-gamma-stimulus-csi-colormap.md  ADR-262-rufield-ruview-integration.md  ADR-263-rtl8720f-2-4ghz-fmcw-radar-platform.md  ADR-263-ruview-npm-harness-deep-review.md  ADR-264-rtl8720f-radar-wire-protocol.md  ADR-264-rvagent-mcp-and-cli-npm-deep-review.md  ADR-265-ruview-npm-distribution-strategy.md  ADR-266-mediatek-filogic-csi-platform.md  ADR-267-mediatek-mimo-csi-wire-protocol.md  ADR-268-qualcomm-atheros-csi-platform.md  ADR-269-qualcomm-csi-wire-protocol.md  ADR-270-vendor-rf-sensing-integration-program.md  README.md
api-docs/ddd/: deployment-platform-domain-model.md
api-docs/releases/: v0.9.0-realtek-beta.1.md  v0.9.1-mediatek-beta.1.md  v0.9.2-qualcomm-beta.1.md  v0.9.3-vendor-providers-beta.1.md
api-docs/research/: sota-nn-train-benchmark-brief.md
benchmarks/wiflow-std/: .gitignore  export_to_safetensors.py
docker/: Dockerfile.rust  docker-compose.yml  docker-entrypoint.sh
docs/: WITNESS-LOG-110.md  user-guide.md
docs/adr/: ADR-131-homecore-ui-operational-dashboard.md  ADR-151-room-calibration-specialist-training.md  ADR-250-adaptive-gamma-entrainment.md  README.md
docs/integration/: calibration-appliance-integration.md
docs/research/ruview-beyond-sota/: 03-benchmark-validation-methodology.md
firmware/esp32-csi-node/main/: csi_collector.c  csi_collector.h
firmware/esp32-csi-node/test/: Makefile  fuzz_csi_serialize.c
firmware/esp32-csi-node/test/stubs/: esp_stubs.h
pointcloud/: index.html
ui/mobile/: package-lock.json  package.json
v2/crates/homecore-api/src/: app.rs  lib.rs
v2/crates/homecore-server/: Cargo.toml
v2/crates/homecore-server/src/: gateway.rs  main.rs
v2/crates/homecore-server/ui/: package.json
v2/crates/homecore-server/ui/js/: api.js
v2/crates/homecore-server/ui/js/panels/: calibration.js  cogs.js  dashboard.js  rooms.js
v2/crates/homecore-server/ui/tests/: unit-fixes.mjs
v2/crates/ruview-gamma/: README.md
v2/crates/ruview-gamma/benches/: optimizer_bench.rs
v2/crates/ruview-gamma/src/: lib.rs  optimizer.rs  ruflo.rs  ruvector.rs
v2/crates/wifi-densepose-bfld/src/: ha_discovery.rs  lib.rs
v2/crates/wifi-densepose-bfld/tests/: frame_trailing_bytes.rs  ha_discovery.rs  user_guide_section.rs
v2/crates/wifi-densepose-calibration/src/: anchor.rs  lib.rs  multistatic.rs
v2/crates/wifi-densepose-calibration/tests/: full_loop.rs
v2/crates/wifi-densepose-cli/: Cargo.toml
v2/crates/wifi-densepose-cli/src/: calibrate.rs  calibrate_api.rs  lib.rs  main.rs
v2/crates/wifi-densepose-engine/src/: lib.rs
v2/crates/wifi-densepose-rufield/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/src/: bearer_auth.rs  cli.rs  lib.rs  main.rs
v2/crates/wifi-densepose-sensing-server/src/mqtt/: config.rs  discovery.rs  mod.rs  privacy.rs
v2/crates/wifi-densepose-sensing-server/src/semantic/: bathroom.rs  bus.rs  common.rs  mod.rs  no_movement.rs  room_active.rs  sleeping.rs
v2/crates/wifi-densepose-train/src/: lib.rs  occupancy_bench.rs
v2/crates/wifi-densepose-train/src/wiflow_std/: model.rs
v2/crates/wifi-densepose-train/tests/: test_wiflow_std_parity.rs
